# mortgage-calculator

./: .gitignore  README.md  example.json  pyproject.toml  schema.json
src/mortgage/: common.py  comparison.py  extra.py  loan.py  mortgage.py  run.py
